--- a/_posts/2016-10-10-Nodelist.md
+++ b/_posts/2016-10-10-Nodelist.md
@@ -5,27 +5,27 @@ categories: jekyll update
 ---
 
 ### Question:
-Explain what a NodeList is and describe examples of NodeLists that can be accessed directly on the document object (like images, forms, and anchors for example).
+Explain what a NodeList is and describes examples of NodeLists that can be accessed directly on the document object (like images, forms, and anchors for example).
 
 <hr>
 
 <h1 style="color:#3CCAE6">What's that: NodeList</h1>
 
-A NodeList is a list of nodes which sounds kind of redundant when I say that but the usefulness lies in what we can do with this DOM object when selecting nodes. The ablility to select a list of nodes gives us the ablility to select all of those type of nodes from the document in return them. 
+A NodeList is a list of nodes which sounds kind of redundant when I say that but the usefulness lies in what we can do with this DOM object when selecting nodes. The ability to select a list of nodes gives us the ability to select all of those types of nodes from the document in return them. 
 
 Introduced with the Level-0 DOM were five objects: `document`, `history`,`window`, `location`, and `navigator` to give us access to their NodeList. I will discuss mainly the document as it's the must commonly used. 
 
-The `document` object was used with Arrays to give it access to NodeList of various elements. There is a Images, Forms, Anchors, Links, and Applets array. The Applets is no longer used thought because it has been deprecated with HTML5. By using these arrays with the document object we can use NodeList in useful ways. 
+The `document` object was used with Arrays to give it access to NodeList of various elements. There is a Images, Forms, Anchors, Links, and Applets array. The Applets is no longer used though because it has been deprecated with HTML5. By using these arrays with the document object we can use NodeList in useful ways. 
 
-You can think of NodeList as though they were classes like we use in CSS. Its a way the DOM differentiates between all the nodes and only returns those that go by that name or type which we can then alter all at once. To illustrate the image below shows how by using the images array we in effect get a NodeList of all of those nodes.
+You can think of NodeList as though they were classes like we use in CSS. It's a way the DOM differentiates between all the nodes and only returns those that go by that name or type which we can then alter all at once. To illustrate the image below shows how by using the images array we in effect get a NodeList of all of those nodes.
 
 <img src="../images/nodeList.png" style="width: 700px; height:350px; margin:20px auto; display: block;">
 
-The yellow ovals around the image nodes shows us they are selected. If we had more images they would also be selected no matter where they are in the document.
+The yellow ovals around the image nodes show us they are selected. If we had more images they would also be selected no matter where they are in the document.
 
  <h1 style="color:#3CCAE6">Live By Example</h1>
 
- There are many other ways we can use these NodeList with other properties you might be familiar with. 
+ There are many other ways we can use this NodeList with other properties you might be familiar with. 
 
 ```javascript
 // returns a nodeList of all images in document
