--- a/_posts/2016-11-26-dev-tools.md
+++ b/_posts/2016-11-26-dev-tools.md
@@ -1,6 +1,11 @@
 ---
-published: false
+layout: post
+title:  "Audio and Video Tags"
+categories: jekyll update
 ---
-## A New Post
+### Question:
+Describe the function of the Google Chrome DevTools and explain the usefulness in front end development.
 
-Enter text in [Markdown](http://daringfireball.net/projects/markdown/). Use the toolbar above, or click the **?** button for formatting help.
+<hr>
+
+<h1 style="color:#3CCAE6">What's Google Chrome DevTools used for? </h1>
