finish dev tools post

--- a/_posts/2016-11-26-dev-tools.md
+++ b/_posts/2016-11-26-dev-tools.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Audio and Video Tags"
+title:  "Why use Google DevTools?"
 categories: jekyll update
 ---
 ### Question:
@@ -9,3 +9,12 @@ Describe the function of the Google Chrome DevTools and explain the usefulness i
 <hr>
 
 <h1 style="color:#3CCAE6">What's Google Chrome DevTools used for? </h1>
+
+Google Chrome DevTools is used in web development for editing source code,CSS changes and also debugging JavaScript. These are the main uses but there are lots more things that can use.
+
+
+It's useful in front-end-development because we can do the same things we can in a text editor but see these changes live without having to reload a page. For example, if we wanted to change the color of some text we could see these changes right away. As a developer, these little things can save a lot of time. 
+
+Another feature that is important as a web developer is making your site look good on a variety of screen sizes luckily DevTools has a built-in feature that allows you to emulate different screen sizes. 
+
+That's only a few reason why you'll want to start using this tool if you arent' already. 
