--- a/_posts/2016-11-26-timeline.md
+++ b/_posts/2016-11-26-timeline.md
@@ -1,6 +1,50 @@
 ---
-published: false
+layout: post
+title:  "Timeline Tab"
+categories: jekyll update
 ---
-## A New Post
+### Question:
+Describe the different capture categories of the Timeline tab (ie. 'JS Profile', 'Memory', etc).
 
-Enter text in [Markdown](http://daringfireball.net/projects/markdown/). Use the toolbar above, or click the **?** button for formatting help.
+<h1 style="color:#3CCAE6">Timeline Tab</h1>
+
+The timeline tab is used for to analyize all the activity that takes place on your website, to see how it performs which can help iron our performance issuse. There are different processes that are recorded which you can check and uncheck if you would like to not include that information. These include: Network, Js Profile, Screenshots, Memory, and Paint. 
+
+
+<img style="display:block; margin: 0 auto; width: 500px" src="../images/timelineCats.png">      
+<p style="text-align: center;text-transform: uppercase; font-size: 10px; font-weight: bolder;">image of timeline categories<p>
+
+I will go over all these categories below shorly pointing out the main uses but not an in-depth view of each.
+
+<h1 style="color:#3CCAE6">Network</h1>
+
+The network box allows us to speed up the network interactions. 
+
+
+<h1 style="color:#3CCAE6">JS Profile</h1>
+
+If JS Profile tab is checked our recording will return all the Javascript functions that where called. If we hover over anyone we can see the runtime of that function. 
+
+<img style="display:block; margin: 0 auto; width: 700px" src="../images/JsProfile.png">      
+<p style="text-align: center;text-transform: uppercase; font-size: 10px; font-weight: bolder;">image of Javascript Stack<p>
+
+
+<h1 style="color:#3CCAE6">Screenshots</h1>
+
+You can capture screenshots with this box checked and will return what is known as a Filmstrip back. It will also give information as to how quickly the pages load and in what order at the bottom of the Filmstrip.
+
+<br>
+<br>
+
+<img style="display:block; margin: 0 auto; width: 700px; height: 300px" src="../images/Screenshot.png">      
+<p style="text-align: center;text-transform: uppercase; font-size: 10px; font-weight: bolder;">image of Screenshot Category<p>
+
+
+<h1 style="color:#3CCAE6">Memory</h1>
+
+The memory category allows us to find memory leaks that we may have in our application which is important for application performance.
+
+
+<h1 style="color:#3CCAE6">Paint</h1>
+
+Paint is used to improve animation performance as sometimes it will be lagging or weird glitches can happen. 
