--- a/_posts/2016-11-26-timeline.md
+++ b/_posts/2016-11-26-timeline.md
@@ -11,14 +11,14 @@ Describe the different capture categories of the Timeline tab (ie. 'JS Profile',
 The timeline tab is used for to analyize all the activity that takes place on your website, to see how it performs which can help iron our performance issuse. There are different processes that are recorded which you can check and uncheck if you would like to not include that information. These include: Network, Js Profile, Screenshots, Memory, and Paint. 
 
 
-<img style="display:block; margin: 0 auto; width: 500px" src="../images/timelineCats.png">      
+<img style="display:block; margin: 0 auto; width: 600px; height: 30px" src="../images/timelineCats.png">      
 <p style="text-align: center;text-transform: uppercase; font-size: 10px; font-weight: bolder;">image of timeline categories<p>
 
 I will go over all these categories below shorly pointing out the main uses but not an in-depth view of each.
 
 <h1 style="color:#3CCAE6">Network</h1>
 
-The network box allows us to speed up the network interactions. 
+The network box allows us to speed up the network interactions.
 
 
 <h1 style="color:#3CCAE6">JS Profile</h1>
