--- a/_posts/2016-12-16-UDP.md
+++ b/_posts/2016-12-16-UDP.md
@@ -1,6 +1,43 @@
 ---
-published: false
+layout: post
+title:  "What's UDP"
+categories: jekyll update
 ---
-## A New Post
+### Question:
+Explain what the UDP is and mention some advantages and disadvantages of using such a protocol.
 
-Enter text in [Markdown](http://daringfireball.net/projects/markdown/). Use the toolbar above, or click the **?** button for formatting help.
+<hr>
+
+ <h1 style="color:#3CCAE6">UDP</h1>
+
+What is UDP you ask, well first off it stands for `User Datagram Protocol`, and is part of the Transport layer on the OSI model. Another part of this Transport layer is TCP(Transmission Control Protocol) which is the main protocol used for most cases as it can send large amounts of data in the form of packets and reassemble that on the other side with little dataloss. The disadvantage of using TCP is that in introduces delays called latency to a greater extent then UDP does.  
+<br>
+<figure>
+<img style="display:block; margin: 0 auto; width: 300px; height:200px" src="../images/mikezooming.jpg"> 
+  <figcaption style="text-align: center">He's up there in a million packets</figcaption>
+</figure>
+<br>
+
+Now UDP provides two main jobs in the Transport layer in that it provides port numbers to distinguish user request and has a checksum abillity to verify that data arrived 100%. Let's get into some advantages of UDP. 
+
+
+ <h1 style="color:#3CCAE6">Advantages</h1>
+
+Well one advantage is that over its TCP big sister is that UDP has a much lower bandwidth overhead and latency. This means that for things such as gaming and voip you can have a better experience like a less laggy multiplayer experience all because UDP. 
+
+ <h1 style="color:#3CCAE6">Disadvantages</h1>
+
+ Well there is a disadvantage to using UDP and that is that packets can be lost or recieved in the wrong order because it doesn't follow the same set rules as TCP. UDP like a firehose, releasing large amounts of water with some water loss. Where TCP is more like a finely tuned vegetable water system with no water loss. 
+
+
+ <figure>
+<img style="display:block; margin: 0 auto; width: 600px; height:300px" src="http://assets2.ignimgs.com/2013/09/12/star-trek-transporter-1280jpg-883390_1280w.jpg"> 
+  <figcaption style="text-align: center">Guys I think we should of used TCP instead of UDP for this</figcaption>
+</figure>
+
+<br>
+<br>
+
+ <h1 style="color:#3CCAE6">Summary</h1>
+
+ So as we can see there aren't really disadvantages or advantages, it comes down to using the right protocol for the job and if that mean gaming or voip or a few other applications then your using the right tool for the job. Beam me up scotty! 
